# zero-copy-lakehouse

./: .env.example  .gitignore  Makefile  README.md  README.pt-BR.md  docker-compose.yml
client-requirements/: project-justification.docx  requirements-specification.docx  solution-architecture.docx  validation-and-acceptance.docx
data/marketing/: campaigns.csv
data/sales/: orders.csv
infra/trino/catalog/: iceberg.properties  iceberg_dev.properties
orchestration/: Dockerfile  pyproject.toml  requirements.txt
orchestration/data_mesh/: __init__.py  definitions.py  demo.py  jobs.py  nessie.py  resources.py  schema.py  seeds.py  trino_io.py
orchestration/data_mesh/assets/: analytics.py  marketing.py  sales.py
orchestration/data_mesh/quality/: expectations.py
scripts/: generate_seed_data.py
sql/: 10_cross_domain_query.sql  20_partitioning_and_optimize.sql  30_time_travel_and_branches.sql
